[package]
name = "sharepoint-request-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "4.1.1", features = ["derive"] }
anyhow = "1.0.68"
regex = "1.7.1"